Add show strat and sources, clean up strat UI
